--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@headlessui/react": "^1.4.3",
     "@hookform/resolvers": "^2.8.5",
     "@reduxjs/toolkit": "^1.7.1",
+    "@svgr/plugin-svgo": "^6.2.0",
+    "@svgr/webpack": "^6.2.1",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
+    "css-select": "^4.2.1",
     "framer-motion": "^4.1.17",
+    "postcss": "^8.4.5",
     "qrcode.react": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -21,6 +25,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
+    "svgo": "^2.8.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -30,6 +35,14 @@
     "styled-components": "^5.3.3",
     "tailwindcss": "^3.0.15",
     "twin.macro": "^2.8.2"
+  },
+  "overrides": {
+    "react-scripts": {
+      "@svgr/webpack": "^6.1.2",
+      "css-select": "^4.2.1",
+      "postcss": "^8.4.5",
+      "svgo": "^2.8.0"
+    }
   },
   "scripts": {
     "start": "react-scripts start",
