--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "^10.4.2",
+    "minimist": "^1.2.6",
+    "node-forge": "^1.3.1",
     "styled-components": "^5.3.3",
     "tailwindcss": "^3.0.15",
     "twin.macro": "^2.8.2"
